@@ -34,6 +34,10 @@
 	* lisp/sawfish/wm/defaults.jl
 	* lisp/sawfish/wm/util/compat.jl: Re-expose edge-flip-delay by
 	Christopher Bratusek. Brings back edge-flip-delay into sawfish-ui.
+	* src/windows.c: Another cleanup by Christopher Bratusek. The
+	window-plist and window-remprop patch by Teika and Timo broke building
+	with "-Wall -ansi -pedantic". Make it work again. (also requires
+	librep r2925 - or newer).
 
 
 
